# ffisr

./: .gitignore  .latexmkrc  README.md  integration.example.toml  pyproject.toml
app/: batch.py  bytetrack_aerial.yaml  codec.py  engine.py  main.py  models.py  transport.py
app/integration/: README.md  __init__.py  config.py  contracts.py  factory.py  pipeline.py
app/integration/adapters/: __init__.py  base.py  px4.py  sightline.py  simulated.py
docs/: video_script.md
docs/video/scenes/: packet_comparison.py
docs/whitepaper/: RESEARCH_RESOURCES.md  main.tex  references.bib
eval/: evaluate.py
static/: app.js  styles.css
templates/: index.html
